<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2011 Marc Meszaros

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_library"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddLibrary_field_name_label" />

    <EditText
        android:id="@+id/activity_add_library__name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/AddLibrary_field_name_hint" />

    <Button
        android:id="@+id/activity_add_library__submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/AddLibrary_button_addLibrary_text" />

</LinearLayout>