<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Marc Meszaros

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">

	<ImageView android:id="@+id/LoanDetails_book_cover"
			   android:layout_width="wrap_content" 
			   android:layout_height="wrap_content" 
			   android:layout_alignParentTop="true"
			   android:padding="5dip"
			   android:src="@drawable/icon">
	</ImageView>
	
	<TextView android:id="@+id/LoanDetails_book_title"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"			   
			  android:layout_alignParentTop="true" 
			  android:layout_alignParentRight="true"
			  android:layout_toRightOf="@id/LoanDetails_book_cover" 
			  android:textStyle="bold">
	</TextView>
	
	<TextView android:id="@+id/LoanDetails_book_author"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:layout_alignParentRight="true"
			  android:layout_below="@id/LoanDetails_book_title" 
			  android:layout_toRightOf="@id/LoanDetails_book_cover"
			  android:singleLine="true"
			  android:ellipsize="marquee">
	</TextView>
	
	<TextView android:id="@+id/LoanDetails_lendDate_label"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:layout_below="@id/LoanDetails_book_cover"
			  android:singleLine="true"
			  android:ellipsize="marquee"
			  android:text="@string/LoanDetails_lendDate_label"
			  android:paddingTop="25sp"
			  android:paddingRight="5sp">
	</TextView>
	<!-- 
	<TextView android:id="@+id/LoanDetails_lendDate"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:layout_below="@id/LoanDetails_book_cover"
			  android:layout_toRightOf="@id/LoanDetails_lendDate_label"
			  android:paddingTop="25sp"
			  android:singleLine="true"
			  android:ellipsize="marquee"
			  android:text="unknown">
	</TextView>
	-->
	
	<Button android:id="@+id/LoanDetails_lendDate_button" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:layout_below="@+id/LoanDetails_lendDate_label"
			android:enabled="false"
			android:text="unknown">
	</Button>
	

	<TextView android:id="@+id/LoanDetails_dueDate_label"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:layout_below="@id/LoanDetails_lendDate_button"
			  android:singleLine="true"
			  android:ellipsize="marquee"
			  android:text="@string/LoanDetails_dueDate_label"
			  android:paddingRight="5sp">
	</TextView>
	<!--  
	<TextView android:id="@+id/LoanDetails_dueDate"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:layout_below="@+id/LoanDetails_lendDate"
			  android:layout_toRightOf="@id/LoanDetails_dueDate_label"
			  android:singleLine="true"
			  android:ellipsize="marquee"
			  android:text="unknown">
	</TextView>
	-->
	<Button android:id="@+id/LoanDetails_dueDate_button" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:layout_below="@+id/LoanDetails_dueDate_label"
			android:text="unknown">
	</Button>
	
	<TextView android:id="@+id/LoanDetails_contact_label"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:layout_below="@id/LoanDetails_dueDate_button"
			  android:singleLine="true"
			  android:ellipsize="marquee"
			  android:paddingRight="5sp"
			  android:text="@string/LoanDetails_contact_label">
	</TextView>
	
<!--
	<TextView android:id="@+id/LoanDetails_contact"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:layout_below="@id/LoanDetails_dueDate"
			  android:layout_toRightOf="@id/LoanDetails_contact_label"
			  android:singleLine="true"
			  android:ellipsize="marquee"
			  android:paddingTop="25sp"
			  android:text="unknown">
	</TextView>
-->

	<Button android:id="@+id/LoanDetails_button" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:layout_below="@id/LoanDetails_contact_label"
			android:text="unknown">
	</Button>
	
</RelativeLayout>
